data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_431.wast
;; 2. **Test Description**: Construct a loop which includes a conditional branch (`br_if`) where the false path contains an `unreachable` instruction.    - **Constraint**: Checks if the loop handles conditional branching correctly ensuring it does not inadvertently fall through to the `unreachable` code.    - **Unreachable Code Execution**: The branch condition should be properly evaluated to avoid reaching the `unreachable` instruction.

(assert_invalid
  (module
    (func $conditional_unreachable 
      (loop (result i32) 
        (i32.const 1)
        (br_if 0)
        (unreachable)
      )
    )
  )
  "type mismatch"
)